# gestao-de-cursos

./: .env-example  .env.development  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: linting.yaml  type-check.yaml
app/: settings.py  urls.py  views.py
courses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
courses/management/commands/: seed_courses.py
courses/migrations/: 0001_initial.py  0002_course_description.py  0003_alter_course_options_course_situation.py  0004_course_slug.py  0005_about_alter_course_slug.py  0006_conctactmessage.py
courses/templates/courses/: 404.html  about.html  base.html  contact.html  course.html  course_suggestions.html  home.html  menu.html  rodape.html
static/css/: style_site.css
