[project]
name = "gestao-de-cursos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
ignore = []
include = []
exclude = [
    "**/.venv",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/migrations"
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "." }]
useLibraryCodeForTypes = true
