[project]
name = "gestao-de-cursos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-tinymce>=5.0.0",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 79
indent-width = 4
exclude = [".venv"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
